--- a/PrimerProyectoWeb/style.css
+++ b/PrimerProyectoWeb/style.css
@@ -16,12 +16,23 @@ body{
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
 }
+
+hi {
+    font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 3.8rem;
+}   
+
+h3 {
+    font-size: 3.8rem;
+}
+
 .titulo{
     text-align: center;
-    font-size: 3.8rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: var(--primario)
 }
+
 span
 h1.titulo span {
     font-size: 2rem;
@@ -33,17 +44,36 @@ h1.titulo span {
     color: var(--oscuro)
 }
 
-.contenedor {
-    width: 120rem;
-    margin:auto;
-    color: var(--primario);
-}
-
 .icono1 {
     color:var(--primario);
 }
 
+.contenedor {
+    max-width: 120rem;
+    margin:0 auto;
+    .color: var(--primario);
+}
+.nav-bg {
+    background-color: var(--secundario);
+}
+
+.navegacion-principal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media (min-width:768px) {
+    .navegacion-principal {
+        flex-direction: row;
+    }
+    
+}
+
 .navegacion-principal a {
+    display: block;
+    align-items: center;
     color: var(--blanco);
     text-decoration: none;
     font-size: 2rem;
@@ -56,25 +86,51 @@ h1.titulo span {
     background-color: var(--primario);
     color: var(--oscuro);
 }
-    
-.navegacion-principal {
-    padding-top: auto;
+
+html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+.hero {
+    background-image: url(Suplementos.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    padding: 20px;
+    position: relative;
+}
+.contenido-hero {
+    position: absolute;
+    background-color:rgba(0,0,0,.3);
+    background-color: rgb(0, 0, 0 / 30%);
+    width: 100%;
+    height: 100%;
+    color: var(--blanco);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+
+}
+
+.contenido-hero h2 {
+    color: var(--blanco);
+
+}
+
+.icono-mapa3 {
+    color: var(--primario);
+    font-size: 4rem;
+}
+
+.iconos-hero {
+    display: flex;
+    align-items: flex-end;
     justify-content: space-between;
+    text-align: center;
 }
-
-.nav-bg {
-    background-color: var(--secundario);
-}
-
-@media (min-width:480px) {
-
-    
-}
-@media (min-width:768px) {
-
-    
-}
-
